 . BitmapFontAtlas: fixed offset/width (issue #537)
 . BitmapFontAtlas: only supports Latin 1 chars (issue #517)
 . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
 . CocosDenshion: added preloadBackgroundMusic and willBackgroundMusicPlay to SimpleAudioEngine (issue #545)
 . CocosNode: improved doxygen documentation (issue #XXX)
 . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
 . Director: fixed 2 leaks on Director#end (issue #524)
 . Documentation: doxygen builds OK when there are spaces in the path (issue #540)
 . Label / Texture2D: Supports any .ttf via FontLabel (issue #534)
 . LabelAtlas: works with 256 different chars (issue #516)
 . RenderTexture: added RenderTexture test (issue #XXX)
 . Resources: improved directory structure (issue #552)
 . TileMap: TMX supports multiple tilesets (1 tileset per layer) (issue #510)
 . Transition: ease actions can be overriden (issue #548)
 . Transition: added PageTurnTransition (issue #522)
 
version 0.8.1 - 26-Ago-2009
 . ActionManager: doesn't delete running actions (issue #481)
 . Box2d: using google code r10 (v2.1.0) (issue #494)
 . CocosDenshion: resumeBackground music (issue #513)
 . MultiplexLayer: removes child using cleanup:YES (issue #466)
 . Particles: no negative size (issue #514)
 . Resources: added new cocos2d logos (issue #521)
 . Template: added Icon.png and Default.png (part of issue #469)
 . Texture2D: using CCLOG instead of NSLog+#ifdef (issue #519)

version 0.8.1-rc - 19-Ago-2009
 . All: Using nonatomic properties (issue #509)
 . ActionManager: fixed crash (issue #490)
 . Actions: RotateTo always rotates to shortest angle fix (issue #499)
 . Box2d: using google code r8 (issue #494)
 . Box2d: added box2dTestBed (part of issue #494)
 . CocosDenshion: correct channel in SimpleAudioEngine (issue #465)
 . CocosDenshion: update buffer status after deletion ( issue #486)
 . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)