@@ -547,10 +547,11 @@ void FNTConfigRemoveCache( void )
 {
 	[super draw];
 	CGSize s = [self contentSize];
-	drawLine( CGPointZero, ccp(s.width,0) );
-	drawLine(CGPointZero, ccp(0,s.height));
-	drawLine( ccp(s.width,0), ccp(s.width,s.height) );
-	drawLine( ccp(s.width,s.height), ccp(0,s.height));
+	CGPoint vertices[4]={
+		ccp(0,0),ccp(s.width,0),
+		ccp(s.width,s.height),ccp(0,s.height),
+	};
+	drawPoly(vertices, 4, YES);
 }
 #endif // CC_BITMAPFONTATLAS_DEBUG_DRAW
 @end
