@@ -9,6 +9,7 @@ version 0.8.2 - XX-MMM-2009
  . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
  . CocosDenshion: added preloadBackgroundMusic and willBackgroundMusicPlay to SimpleAudioEngine (issue #545)
  . CocosNode: improved doxygen documentation (issue #XXX)
+ . CocosNode: added boundingBox method (issue #528)
  . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
  . Director: fixed 2 leaks on Director#end (issue #524)
  . Documentation: doxygen builds OK when there are spaces in the path (issue #540)
